<resources>
    <string name="app_name">AWHealth</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!-- 通知-->
    <string name="headsup_titile">健康资讯</string>
    <string name="headsup_content">有新的健康资讯推送信息，快来查阅吧</string>

    <string name="text_collection">收藏</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="network_state_disconnect">无网络连接</string>
    <string name="snap_load_fail">加载失败，请重试</string>
    <string name="retry">重试</string>
    <string name="network_bad">信号不好吗？</string>
    <string name="title_activity_health_infor_detail">资讯详情</string>

    <!-- 收藏-->
    <string name="collect_success">收藏成功</string>
    <string name="collect_faield">收藏失败</string>
    <string name="collect_repeat">取消收藏</string>

    <!-- 一些标题-->
    <string name="title_HealthInfor">健康资讯</string>
    <string name="title_Setting">设置</string>
    <string name="title_Search">查一查</string>
    <string name="title_PeripheralMapActivity">附近医院</string>
    <string name="title_QuestionActivity">问答</string>
    <!--Setting-->
    <string name="setting_key_clear_cache">clear_cache</string>
    <string name="setting_key_change_language">change_language</string>
    <string name="setting_key_exit_confirm">exit_confirm</string>
    <string name="setting_key_notify_message">notify_message</string>
    <string name="setting_key_slide_back">slide_back</string>
    <string name="text_language">切换语言</string>
    <string name="text_slide_back">滑动返回(右滑)</string>
    <string name="text_exit_confirm">再按一次退出</string>
    <string name="text_notify_message">每日提醒</string>
    <string name="text_notify_message_summary">将在每日12点定时推送消息</string>

    <string name="text_exit_confirm_summary">按两次返回键退出应用</string>
    <string name="notify_exit_confirm">再按一次退出</string>

    <!--Share-->
    <string name="action_share">分享</string>
    <string name="share_text">这是一款免费的移动健康资讯运用的，有有趣的健康问答、实用的健康资讯、还能够查询药品和疾病及查询附近医院并且有地图哦\n项目源代码已经开源：https://github.com/nimdanoob/AWHealth3，欢迎Start、Fork</string>

    <!--About-->
    <!-- AboutActivity-->
    <string name="share">分享给朋友</string>
    <string name="app_introduce">一款基于Android平台的健康传播应用</string>
    <string name="group_introduce">介绍与帮助</string>
    <string name="app_detail_introduce">AWhealth，这是一款推送健康资讯的App,模块分为健康资讯、查一查、附近医院、精品问答4个模块，数据来源于天狗云API
        软件部分采用了MVP的设计模式，使用Retrofit2作为网络请求的框架，图片加载使用了Fresco。\n 主要的功能菜单通过向右侧滑打开.\n 源代码在https://github.com/nimdanoob/AWHealth3
    </string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登入</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">登入</string>
    <string name="error_invalid_email">错误的邮箱地址</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">这个字段不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">注册</string>
</resources>
