<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="偏好">
        <Preference
            android:key="@string/setting_key_change_language"
            android:title="语言"
            />
        <CheckBoxPreference
            android:key="@string/setting_key_notify_message"
            android:title="@string/text_notify_message"
            android:summary="@string/text_notify_message_summary"
            android:checked="true"
            />
        <CheckBoxPreference
            android:key="@string/setting_key_exit_confirm"
            android:title="@string/text_exit_confirm"
            android:summary="@string/text_exit_confirm_summary"
            android:checked="true"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="网络">
        <Preference
            android:key="@string/setting_key_clear_cache"
            android:title="清除缓存"
            android:summary="清楚包括图片和文本的本地缓存与内存缓存"/>
    </PreferenceCategory>
</PreferenceScreen>